# django-dynamic-contents

./: .gitignore  LICENSE  MANIFEST.in  README-dev.md  README.md  requirements.txt  setup.cfg
config/: asgi.py  settings.py  urls.py  wsgi.py
django_package_app/: admin.py  apps.py  models.py  pagination.py  serializers.py  urls.py  views.py
dynamic_contents/: admin.py  apps.py  gateway.py  models.py  serializers.py  settings.py  translation.py  urls.py  utils.py  views.py
dynamic_contents/locale/ar/LC_MESSAGES/: django.po
dynamic_contents/locale/en/LC_MESSAGES/: django.po
dynamic_contents/locale/es/LC_MESSAGES/: django.po
dynamic_contents/locale/ja/LC_MESSAGES/: django.po
dynamic_contents/locale/ko/LC_MESSAGES/: django.po
dynamic_contents/locale/ru/LC_MESSAGES/: django.po
dynamic_contents/locale/zh/LC_MESSAGES/: django.po
dynamic_contents/migrations/: 0001_initial.py  0002_format_subtype.py
dynamic_contents/tests/: test_utils.py
migrations/dynamic_contents/: 0003_format_content_en_format_content_es_and_more.py  0004_format_placeholders.py  0005_rename_placeholders_format__placeholders.py  0006_alter_format_subtype.py
