[metadata]
name = django-package-app
version = 0.0.1
description = Package Template for Django.
long_description_content_type = text/markdown
long_description = file:README.md
url = https://github.com/runners-2022/django-package-boilerplate
author = Sunwook Kim
author_email = sun@runners.im
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    django

[options.packages.find]
exclude =
    config*
