[metadata]
name = django-dynamic-contents
version = 1.0.30
description = A Django library for creating and managing dynamic, customizable content structures with ease. Designed to enhance multilingual support in Django applications, it facilitates the creation of HTML or text content that can be easily translated into multiple languages, offering a flexible solution for integrating varied content parts.
long_description_content_type = text/markdown
long_description = file:README.md
url = https://github.com/runners-2022/django-dynamic-content
author = Sunwook Kim
author_email = sun@runners.im
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    django>=3.0
    djangorestframework>=3.11

[options.packages.find]
exclude =
    config*
    migrations*